--- a/css/about.css
+++ b/css/about.css
@@ -4,16 +4,20 @@
     margin-right: auto;
     margin-left: auto;
 }
+
 section {
     height: 22vh;
     display: block;
 }
+
 #about h1 {
     font-size: 3em;
 }
-#about h2 {
+
+#achieve h2 {
     font-size: 2em;
 }
-#about ul {
+
+#achieve ul {
     font-size: 1.5em;
 }
