--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,7 @@
 :root {
-    --profile-height: auto;
-    --overview-height: auto;
-    --about-height: auto;
-    --achieve-height: auto;
-    --contact-height: auto;
+    --section-height: auto;
     --total-width: 70vw;
     --header-height: 8vh;
-    --header-font-size: 2vw;
     --profile-pic-max-width: 100%;
     --profile-h1-font-size: 5vw;
     --p-font-size: 2.5vw;
@@ -18,6 +13,29 @@
 body {
     margin: var(--header-height) 0 0;
     font-family: sans-serif;
+}
+
+section {
+    height: var(--section-height);
+    border-bottom: 1px solid black;
+    padding: 1vh 0 1vh 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+h1 {
+    font-size: var(--h1-font-size);
+    max-height: 100%;
+}
+
+p {
+    font-size: var(--p-font-size);
+}
+
+ul {
+    font-size: var(--p-font-size);
 }
 
 .encasing-div {
@@ -39,7 +57,7 @@ header {
     right: 0;
     height: var(--header-height);
     line-height: var(--header-height);
-    font-size: var(--header-font-size);
+    font-size: var(--p-font-size);
     background-color: white;
     max-width: var(--total-width);
     margin-right: auto;
@@ -64,16 +82,6 @@ header a {
     color: black;
 }
 
-#profile {
-    height: var(--profile-height);
-    padding: 1vh 0 1vh 0;
-    border-bottom: 1px solid black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-
 #profile .profile-pic {
     border-radius: 50%;
     height: auto;
@@ -85,70 +93,12 @@ header a {
     font-size: var(--profile-h1-font-size);
 }
 
-#overview {
-    height: var(--overview-height);
-    border-bottom: 1px solid black;
-    padding: 1vh 0 1vh 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-
-#overview p {
-    font-size: var(--p-font-size);
-}
-
 #about {
-    height: var(--about-height);
-    border-bottom: 1px solid black;
-    padding: 1vh 0 1vh 0;
     display: block;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-
-#about h1 {
-    font-size: var(--h1-font-size);
-    max-height: 100%;
-}
-
-#about p {
-    font-size: var(--p-font-size);
 }
 
 #achieve {
-    height: var(--achieve-height);
-    border-bottom: 1px solid black;
-    padding: 1vh 0 1vh 0;
     display: block;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-
-#achieve h1 {
-    font-size: var(--h1-font-size);
-    max-height: 100%;
-}
-
-#achieve ul {
-    font-size: var(--p-font-size);
-}
-
-#contact {
-    height: var(--contact-height);
-    border-bottom: 1px solid black;
-    padding: 1vh 0 1vh 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-
-#contact p {
-    font-size: var(--p-font-size);
 }
 
 footer {
@@ -161,7 +111,6 @@ footer {
 @media (max-width: 320px) {
     :root {
         --total-width: 85vw;
-        --header-font-size: 5vw;
         --profile-pic-max-width: 60%;
         --profile-h1-font-size: 10vw;
         --p-font-size: 6.5vw;
@@ -173,7 +122,6 @@ footer {
 @media (min-width: 321px) and (max-width: 480px) {
     :root {
         --total-width: 85vw;
-        --header-font-size: 5vw;
         --profile-pic-max-width: 60%;
         --profile-h1-font-size: 9vw;
         --p-font-size: 5vw;
@@ -185,7 +133,6 @@ footer {
 @media (min-width: 481px) and (max-width: 1080px) {
     :root {
         --total-width: 85vw;
-        --header-font-size: 3vw;
         --profile-pic-max-width: 50%;
         --profile-h1-font-size: 9vw;
         --p-font-size: 5vw;
