--- a/css/styles.css
+++ b/css/styles.css
@@ -48,6 +48,12 @@ a {
     color: var(--link-color);
 }
 
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .encasing-div {
     display: block;
     max-width: var(--total-width);
@@ -84,6 +90,7 @@ header ul {
 
 header li {
     margin-left: 20px;
+    text-align: left;
 }
 
 header a {
@@ -108,6 +115,10 @@ header a {
 
 #achieve {
     display: block;
+}
+
+#achieve li {
+    text-align: left;
 }
 
 footer {
